--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -4,13 +4,11 @@ on:
   push:
     branches: main
 
-env:
-  CARGO_TERM_COLOR: always
-
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout
+      uses: actions/checkout@v3
     - name: Build and run integration tests
       run: cargo test --test "*"
