--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,5 +10,5 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v3
-    - name: Build and run integration tests
-      run: cargo test --test "*"
+    - name: Run all tests
+      run: cargo test
