--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -10,11 +10,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout
-      uses: actions/checkout@v3
-    - name: Check code formatting is consistent
-      run: cargo fmt --check
-    - name: Lint code
-      run: cargo clippy -- --deny warnings
-    - name: Run all tests
-      run: cargo test
+    - uses: actions/checkout@v3
+    - run: cargo fmt --check
+    - run: cargo clippy -- --deny warnings
+    - run: cargo test
