--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Build docs
-        run: RUSTDOCFLAGS="--document-private-items --default-theme=ayu" cargo doc
+        run: RUSTDOCFLAGS="--document-private-items --default-theme=ayu -Dwarnings" cargo doc
       - name: Cleanup
         run: rm target/doc/.lock
       - name: Copy static assets
