--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,18 +12,19 @@ private_intra_doc_links = "allow"
 
 [lints.rust]
 absolute_paths_not_starting_with_crate = "warn"
+box_pointers = "warn"
 elided_lifetimes_in_paths = "warn"
 explicit_outlives_requirements = "warn"
 ffi_unwind_calls = "warn"
-invalid_reference_casting = "warn"
 keyword_idents = "warn"
 let_underscore_drop = "warn"
 macro_use_extern_crate = "warn"
 meta_variable_misuse = "warn"
 missing_abi = "warn"
 non_ascii_idents = "warn"
-noop_method_call = "warn"
 pointer_structural_match = "warn"
+private_bounds = "warn"
+private_interfaces = "warn"
 single_use_lifetimes = "warn"
 trivial_casts = "warn"
 trivial_numeric_casts = "warn"
@@ -41,34 +42,53 @@ variant_size_differences = "warn"
 
 [lints.clippy]
 absolute_paths = "warn"
+alloc_instead_of_core = "warn"
+allow_attributes = "warn"
+as_underscore = "warn"
+assertions_on_result_states = "warn"
 bool_to_int_with_if = "warn"
 borrow_as_ptr = "warn"
 case_sensitive_file_extension_comparisons = "warn"
 cast_precision_loss = "warn"
 cast_ptr_alignment = "warn"
 checked_conversions = "warn"
+clone_on_ref_ptr = "warn"
 cloned_instead_of_copied = "warn"
 copy_iterator = "warn"
+create_dir = "warn"
+dbg_macro = "warn"
+decimal_literal_representation = "warn"
 default_trait_access = "warn"
+default_union_representation = "warn"
+disallowed_script_idents = "warn"
 doc_link_with_quotes = "warn"
 doc_markdown = "warn"
+empty_drop = "warn"
 empty_enum = "warn"
 empty_structs_with_brackets = "warn"
+error_impl_error = "warn"
+exit = "warn"
+expect_used = "warn"
 expl_impl_clone_on_copy = "warn"
 explicit_deref_methods = "warn"
 explicit_into_iter_loop = "warn"
 explicit_iter_loop = "warn"
+filetype_is_file = "warn"
 filter_map_next = "warn"
 flat_map_option = "warn"
 float_arithmetic = "warn"
 float_cmp = "warn"
+float_cmp_const = "warn"
 fn_params_excessive_bools = "warn"
+fn_to_numeric_cast_any = "warn"
+format_push_string = "warn"
 from_iter_instead_of_collect = "warn"
+get_unwrap = "warn"
 if_not_else = "warn"
 if_then_some_else_none = "warn"
 ignored_unit_patterns = "warn"
-implicit_clone = "warn"
 impl_trait_in_params = "warn"
+implicit_clone = "warn"
 inconsistent_struct_constructor = "warn"
 index_refutable_slice = "warn"
 inefficient_to_string = "warn"
@@ -78,38 +98,58 @@ items_after_statements = "warn"
 iter_not_returning_iterator = "warn"
 large_digit_groups = "warn"
 large_futures = "warn"
+large_include_file = "warn"
 large_stack_arrays = "warn"
 large_types_passed_by_value = "warn"
 linkedlist = "warn"
+lossy_float_literal = "warn"
 macro_use_imports = "warn"
 manual_assert = "warn"
 manual_instant_elapsed = "warn"
 manual_let_else = "warn"
 manual_ok_or = "warn"
 manual_string_new = "warn"
+map_err_ignore = "warn"
 map_unwrap_or = "warn"
 match_bool = "warn"
 match_same_arms = "warn"
 match_wild_err_arm = "warn"
 match_wildcard_for_single_variants = "warn"
 maybe_infinite_iter = "warn"
+mem_forget = "warn"
 mismatching_type_param_order = "warn"
+missing_enforced_import_renames = "warn"
 missing_errors_doc = "warn"
 missing_fields_in_debug = "warn"
+mixed_read_write_in_expression = "warn"
+mod_module_files = "warn"
+multiple_crate_versions = "warn"
+multiple_inherent_impl = "warn"
+multiple_unsafe_ops_per_block = "warn"
 mut_mut = "warn"
+mutex_atomic = "warn"
 needless_bitwise_bool = "warn"
 needless_continue = "warn"
 needless_for_each = "warn"
 needless_pass_by_value = "warn"
 needless_raw_strings = "warn"
+negative_feature_names = "warn"
 no_effect_underscore_binding = "warn"
 no_mangle_with_rust_abi = "warn"
 option_option = "warn"
+panic_in_result_fn = "warn"
+partial_pub_fields = "warn"
+print_stderr = "warn"
 ptr_as_ptr = "warn"
 ptr_cast_constness = "warn"
+pub_use = "warn"
+pub_with_shorthand = "warn"
 range_minus_one = "warn"
+rc_buffer = "warn"
+rc_mutex = "warn"
 redundant_closure_for_method_calls = "warn"
 redundant_else = "warn"
+redundant_feature_names = "warn"
 redundant_type_annotations = "warn"
 ref_binding_to_reference = "warn"
 ref_option_ref = "warn"
@@ -117,18 +157,30 @@ rest_pat_in_fully_bound_structs = "warn"
 return_self_not_must_use = "warn"
 same_functions_in_if_condition = "warn"
 semicolon_if_nothing_returned = "warn"
+semicolon_inside_block = "warn"
+should_panic_without_expect = "warn"
 single_match_else = "warn"
 stable_sort_primitive = "warn"
+string_add = "warn"
 string_add_assign = "warn"
+string_lit_chars_any = "warn"
 struct_excessive_bools = "warn"
+suspicious_xor_used_as_pow = "warn"
+todo = "warn"
 too_many_lines = "warn"
 transmute_ptr_to_ptr = "warn"
 trivially_copy_pass_by_ref = "warn"
+try_err = "warn"
 unchecked_duration_subtraction = "warn"
+undocumented_unsafe_blocks = "warn"
 unicode_not_nfc = "warn"
+unimplemented = "warn"
 uninlined_format_args = "warn"
 unnecessary_box_returns = "warn"
 unnecessary_join = "warn"
+unnecessary_safety_comment = "warn"
+unnecessary_safety_doc = "warn"
+unnecessary_self_imports = "warn"
 unnecessary_wraps = "warn"
 unneeded_field_pattern = "warn"
 unnested_or_patterns = "warn"
@@ -138,4 +190,6 @@ unused_async = "warn"
 unused_self = "warn"
 used_underscore_binding = "warn"
 verbose_bit_mask = "warn"
+verbose_file_reads = "warn"
+wildcard_dependencies = "warn"
 zero_sized_map_values = "warn"
