--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "aoc"
 version = "2023.12.25"
 edition = "2021"
-rust-version = "1.74"
+rust-version = "1.75"
 
 [features]
 frivolity = []
@@ -164,6 +164,7 @@ string_add = "warn"
 string_add_assign = "warn"
 string_lit_chars_any = "warn"
 struct_excessive_bools = "warn"
+struct_field_names = "warn"
 suspicious_xor_used_as_pow = "warn"
 todo = "warn"
 too_many_lines = "warn"
@@ -176,6 +177,7 @@ unicode_not_nfc = "warn"
 unimplemented = "warn"
 uninlined_format_args = "warn"
 unnecessary_box_returns = "warn"
+unnecessary_fallible_conversions = "warn"
 unnecessary_join = "warn"
 unnecessary_safety_comment = "warn"
 unnecessary_safety_doc = "warn"
@@ -186,9 +188,11 @@ unnested_or_patterns = "warn"
 unsafe_derive_deserialize = "warn"
 unseparated_literal_suffix = "warn"
 unused_async = "warn"
+unused_enumerate_index = "warn"
 unused_self = "warn"
 used_underscore_binding = "warn"
 verbose_bit_mask = "warn"
 verbose_file_reads = "warn"
+waker_clone_wake = "warn"
 wildcard_dependencies = "warn"
 zero_sized_map_values = "warn"
