--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -20,8 +20,7 @@ jobs:
       - uses: actions/checkout@v3
       - run: cargo doc
         env:
-          RUSTDOCFLAGS: "--document-private-items --default-theme=ayu -Dwarnings"
-      - run: rm target/doc/.lock
+          RUSTDOCFLAGS: "--document-private-items --default-theme=ayu --deny warnings"
       - run: cp docs/* target/doc
       - uses: actions/upload-pages-artifact@v1
         with:
