--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "aoc"
 version = "2023.12.25"
 edition = "2021"
-rust-version = "1.75"
+rust-version = "1.76"
 
 [features]
 frivolity = []
@@ -92,6 +92,7 @@ implicit_clone = "warn"
 inconsistent_struct_constructor = "warn"
 index_refutable_slice = "warn"
 inefficient_to_string = "warn"
+infinite_loop = "warn"
 inline_always = "warn"
 invalid_upcast_comparisons = "warn"
 items_after_statements = "warn"
@@ -175,6 +176,7 @@ unchecked_duration_subtraction = "warn"
 undocumented_unsafe_blocks = "warn"
 unicode_not_nfc = "warn"
 unimplemented = "warn"
+uninhabited_references = "warn"
 uninlined_format_args = "warn"
 unnecessary_box_returns = "warn"
 unnecessary_fallible_conversions = "warn"
