--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "aoc"
 version = "2023.12.25"
 edition = "2021"
-rust-version = "1.76"
+rust-version = "1.77"
 
 [features]
 frivolity = []
@@ -65,6 +65,7 @@ doc_link_with_quotes = "warn"
 doc_markdown = "warn"
 empty_drop = "warn"
 empty_enum = "warn"
+empty_enum_variants_with_brackets = "warn"
 empty_structs_with_brackets = "warn"
 error_impl_error = "warn"
 exit = "warn"
@@ -96,6 +97,8 @@ infinite_loop = "warn"
 inline_always = "warn"
 invalid_upcast_comparisons = "warn"
 items_after_statements = "warn"
+iter_filter_is_ok = "warn"
+iter_filter_is_some = "warn"
 iter_not_returning_iterator = "warn"
 large_digit_groups = "warn"
 large_futures = "warn"
@@ -106,7 +109,9 @@ linkedlist = "warn"
 lossy_float_literal = "warn"
 macro_use_imports = "warn"
 manual_assert = "warn"
+manual_c_str_literals = "warn"
 manual_instant_elapsed = "warn"
+manual_is_variant_and = "warn"
 manual_let_else = "warn"
 manual_ok_or = "warn"
 manual_string_new = "warn"
@@ -137,11 +142,13 @@ needless_raw_strings = "warn"
 negative_feature_names = "warn"
 no_effect_underscore_binding = "warn"
 no_mangle_with_rust_abi = "warn"
+option_as_ref_cloned = "warn"
 option_option = "warn"
 panic_in_result_fn = "warn"
 partial_pub_fields = "warn"
 ptr_as_ptr = "warn"
 ptr_cast_constness = "warn"
+pub_underscore_fields = "warn"
 pub_use = "warn"
 pub_with_shorthand = "warn"
 range_minus_one = "warn"
@@ -151,6 +158,7 @@ redundant_closure_for_method_calls = "warn"
 redundant_else = "warn"
 redundant_feature_names = "warn"
 redundant_type_annotations = "warn"
+ref_as_ptr = "warn"
 ref_binding_to_reference = "warn"
 ref_option_ref = "warn"
 rest_pat_in_fully_bound_structs = "warn"
@@ -166,6 +174,7 @@ string_add_assign = "warn"
 string_lit_chars_any = "warn"
 struct_excessive_bools = "warn"
 struct_field_names = "warn"
+str_split_at_newline = "warn"
 suspicious_xor_used_as_pow = "warn"
 todo = "warn"
 too_many_lines = "warn"
