Implement much faster SIMD MD5 alternative

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -199,7 +199,7 @@ ptr_as_ptr = "warn"
 ptr_cast_constness = "warn"
 pub_underscore_fields = "warn"
 pub_use = "warn"
-pub_with_shorthand = "warn"
+pub_with_shorthand = "allow"
 pub_without_shorthand = "warn"
 question_mark_used = "allow"
 range_minus_one = "warn"
