--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "aoc"
 version = "2023.12.25"
 edition = "2021"
-rust-version = "1.79"
+rust-version = "1.80"
 
 [features]
 frivolity = []
@@ -213,6 +213,7 @@ ref_as_ptr = "warn"
 ref_binding_to_reference = "warn"
 ref_option_ref = "warn"
 ref_patterns = "warn"
+renamed_function_params = "warn"
 rest_pat_in_fully_bound_structs = "warn"
 return_self_not_must_use = "warn"
 same_functions_in_if_condition = "warn"
@@ -275,6 +276,7 @@ use_debug = "warn"
 used_underscore_binding = "warn"
 verbose_bit_mask = "warn"
 verbose_file_reads = "warn"
+while_float = "warn"
 wildcard_dependencies = "warn"
 wildcard_enum_match_arm = "allow"
 wildcard_imports = "allow"
