--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "aoc"
 version = "2023.12.25"
 edition = "2021"
-rust-version = "1.80"
+rust-version = "1.81"
 
 [features]
 frivolity = []
@@ -45,8 +45,8 @@ variant_size_differences = "warn"
 [lints.clippy]
 absolute_paths = "warn"
 alloc_instead_of_core = "warn"
-allow_attributes = "warn"
-allow_attributes_without_reason = "warn"
+allow_attributes = "allow"
+allow_attributes_without_reason = "allow"
 arithmetic_side_effects = "allow"
 as_conversions = "allow"
 as_underscore = "warn"
@@ -62,6 +62,7 @@ cast_possible_wrap = "allow"
 cast_precision_loss = "warn"
 cast_ptr_alignment = "warn"
 cast_sign_loss = "allow"
+cfg_not_test = "warn"
 checked_conversions = "warn"
 clone_on_ref_ptr = "warn"
 cloned_instead_of_copied = "warn"
@@ -91,6 +92,7 @@ expl_impl_clone_on_copy = "warn"
 explicit_deref_methods = "warn"
 explicit_into_iter_loop = "warn"
 explicit_iter_loop = "warn"
+field_scoped_visibility_modifiers = "warn"
 filetype_is_file = "warn"
 filter_map_next = "warn"
 flat_map_option = "warn"
@@ -224,6 +226,7 @@ semicolon_if_nothing_returned = "warn"
 semicolon_inside_block = "warn"
 semicolon_outside_block = "warn"
 separated_literal_suffix = "allow"
+set_contains_or_insert = "warn"
 shadow_reuse = "allow"
 shadow_same = "allow"
 shadow_unrelated = "allow"
