--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "aoc"
 version = "2023.12.25"
 edition = "2021"
-rust-version = "1.81"
+rust-version = "1.82"
 
 [features]
 frivolity = []
@@ -13,6 +13,7 @@ private_intra_doc_links = "allow"
 
 [lints.rust]
 absolute_paths_not_starting_with_crate = "warn"
+ambiguous_negative_literals = "warn"
 elided_lifetimes_in_paths = "warn"
 explicit_outlives_requirements = "warn"
 ffi_unwind_calls = "warn"
@@ -23,13 +24,19 @@ missing_abi = "warn"
 missing_copy_implementations = "allow"
 missing_debug_implementations = "allow"
 missing_docs = "allow"
+missing_unsafe_on_extern = "warn"
 non_ascii_idents = "warn"
 non_local_definitions = "warn"
+redundant_imports = "warn"
+redundant_lifetimes = "warn"
 single_use_lifetimes = "warn"
+tail_expr_drop_order = "allow"
 trivial_casts = "warn"
 trivial_numeric_casts = "warn"
 unit_bindings = "warn"
+unnameable_types = "warn"
 unreachable_pub = "warn"
+unsafe_attr_outside_unsafe = "warn"
 unsafe_code = "warn"
 unsafe_op_in_unsafe_fn = "warn"
 unstable_features = "warn"
@@ -51,10 +58,10 @@ arithmetic_side_effects = "allow"
 as_conversions = "allow"
 as_underscore = "warn"
 assertions_on_result_states = "warn"
+assigning_clones = "warn"
 big_endian_bytes = "allow"
 bool_to_int_with_if = "warn"
 borrow_as_ptr = "warn"
-cargo_common_metadata = "allow"
 case_sensitive_file_extension_comparisons = "warn"
 cast_lossless = "allow"
 cast_possible_truncation = "allow"
@@ -133,7 +140,7 @@ iter_without_into_iter = "warn"
 large_digit_groups = "warn"
 large_futures = "warn"
 large_include_file = "warn"
-large_stack_arrays = "warn"
+large_stack_arrays = "allow"
 large_types_passed_by_value = "warn"
 let_underscore_must_use = "allow"
 let_underscore_untyped = "warn"
@@ -172,7 +179,6 @@ mixed_read_write_in_expression = "warn"
 mod_module_files = "warn"
 module_name_repetitions = "allow"
 modulo_arithmetic = "allow"
-multiple_crate_versions = "warn"
 multiple_inherent_impl = "warn"
 multiple_unsafe_ops_per_block = "warn"
 must_use_candidate = "allow"
@@ -185,7 +191,6 @@ needless_for_each = "warn"
 needless_pass_by_value = "warn"
 needless_raw_string_hashes = "warn"
 needless_raw_strings = "warn"
-negative_feature_names = "warn"
 no_effect_underscore_binding = "warn"
 no_mangle_with_rust_abi = "warn"
 non_ascii_literal = "allow"
@@ -194,6 +199,7 @@ option_option = "warn"
 panic = "allow"
 panic_in_result_fn = "warn"
 partial_pub_fields = "warn"
+pathbuf_init_then_push = "warn"
 pattern_type_mismatch = "allow"
 print_stderr = "allow"
 print_stdout = "allow"
@@ -210,7 +216,6 @@ rc_buffer = "warn"
 rc_mutex = "warn"
 redundant_closure_for_method_calls = "warn"
 redundant_else = "warn"
-redundant_feature_names = "warn"
 redundant_type_annotations = "warn"
 ref_as_ptr = "warn"
 ref_binding_to_reference = "warn"
@@ -226,7 +231,6 @@ semicolon_if_nothing_returned = "warn"
 semicolon_inside_block = "warn"
 semicolon_outside_block = "warn"
 separated_literal_suffix = "allow"
-set_contains_or_insert = "warn"
 shadow_reuse = "allow"
 shadow_same = "allow"
 shadow_unrelated = "allow"
@@ -273,6 +277,7 @@ unreadable_literal = "allow"
 unsafe_derive_deserialize = "warn"
 unseparated_literal_suffix = "warn"
 unused_async = "warn"
+unused_result_ok = "warn"
 unused_self = "warn"
 unwrap_in_result = "allow"
 unwrap_used = "allow"
@@ -280,8 +285,6 @@ use_debug = "warn"
 used_underscore_binding = "warn"
 verbose_bit_mask = "warn"
 verbose_file_reads = "warn"
-while_float = "warn"
-wildcard_dependencies = "warn"
 wildcard_enum_match_arm = "allow"
 wildcard_imports = "allow"
 zero_sized_map_values = "warn"
