--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "aoc"
 version = "2024.12.25"
 edition = "2021"
-rust-version = "1.82"
+rust-version = "1.83"
 
 [features]
 frivolity = []
@@ -194,6 +194,7 @@ needless_raw_strings = "warn"
 no_effect_underscore_binding = "warn"
 no_mangle_with_rust_abi = "warn"
 non_ascii_literal = "allow"
+non_zero_suggestions = "warn"
 option_as_ref_cloned = "warn"
 option_option = "warn"
 panic = "allow"
@@ -219,7 +220,7 @@ redundant_else = "warn"
 redundant_type_annotations = "warn"
 ref_as_ptr = "warn"
 ref_binding_to_reference = "warn"
-ref_option_ref = "warn"
+ref_option = "warn"
 ref_patterns = "warn"
 renamed_function_params = "warn"
 rest_pat_in_fully_bound_structs = "warn"
@@ -279,6 +280,7 @@ unseparated_literal_suffix = "warn"
 unused_async = "warn"
 unused_result_ok = "warn"
 unused_self = "warn"
+unused_trait_names = "warn"
 unwrap_in_result = "allow"
 unwrap_used = "allow"
 use_debug = "warn"
