--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -13,7 +13,7 @@ jobs:
     - uses: actions/checkout@v4
     - run: rustup install nightly --profile default
     - run: rustup default nightly
-    - run: cargo fmt --check -- **/*.rs
+    - run: cargo fmt --check -- `find . -name "*.rs"`
     - run: cargo clippy --all-targets --all-features -- --deny warnings
 
   test-stable:
