--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -18,6 +18,7 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     steps:
       - uses: actions/checkout@v4
+      - run: rustup default 1.84
       - run: cargo doc
         env:
           RUSTDOCFLAGS: "--document-private-items --default-theme=ayu --deny warnings"
