--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "aoc"
 version = "2024.12.25"
 edition = "2021"
-rust-version = "1.83"
+rust-version = "1.84"
 
 [features]
 frivolity = []
@@ -54,6 +54,7 @@ absolute_paths = "warn"
 alloc_instead_of_core = "warn"
 allow_attributes = "allow"
 allow_attributes_without_reason = "allow"
+arbitrary_source_item_ordering = "allow"
 arithmetic_side_effects = "allow"
 as_conversions = "allow"
 as_underscore = "warn"
@@ -151,6 +152,7 @@ macro_use_imports = "warn"
 manual_assert = "warn"
 manual_c_str_literals = "warn"
 manual_instant_elapsed = "warn"
+manual_is_power_of_two = "warn"
 manual_is_variant_and = "warn"
 manual_let_else = "warn"
 manual_ok_or = "warn"
@@ -158,6 +160,7 @@ manual_string_new = "warn"
 many_single_char_names = "allow"
 map_err_ignore = "warn"
 map_unwrap_or = "warn"
+map_with_unused_argument_over_ranges = "warn"
 match_bool = "warn"
 match_on_vec_items = "allow"
 match_same_arms = "warn"
@@ -267,6 +270,7 @@ unimplemented = "warn"
 uninlined_format_args = "warn"
 unnecessary_box_returns = "warn"
 unnecessary_join = "warn"
+unnecessary_literal_bound = "warn"
 unnecessary_safety_comment = "warn"
 unnecessary_safety_doc = "warn"
 unnecessary_self_imports = "warn"
@@ -284,7 +288,7 @@ unused_trait_names = "warn"
 unwrap_in_result = "allow"
 unwrap_used = "allow"
 use_debug = "warn"
-used_underscore_binding = "warn"
+used_underscore_items = "warn"
 verbose_bit_mask = "warn"
 verbose_file_reads = "warn"
 wildcard_enum_match_arm = "allow"
