--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "aoc"
 version = "2024.12.25"
-edition = "2021"
-rust-version = "1.84"
+edition = "2024"
+rust-version = "1.85"
 
 [features]
 frivolity = []
@@ -14,9 +14,11 @@ private_intra_doc_links = "allow"
 [lints.rust]
 absolute_paths_not_starting_with_crate = "warn"
 ambiguous_negative_literals = "warn"
+closure-returning-async-block = "warn"
 elided_lifetimes_in_paths = "warn"
 explicit_outlives_requirements = "warn"
 ffi_unwind_calls = "warn"
+if-let-rescope = "warn"
 let_underscore_drop = "warn"
 macro_use_extern_crate = "warn"
 meta_variable_misuse = "warn"
@@ -26,7 +28,6 @@ missing_debug_implementations = "allow"
 missing_docs = "allow"
 missing_unsafe_on_extern = "warn"
 non_ascii_idents = "warn"
-non_local_definitions = "warn"
 redundant_imports = "warn"
 redundant_lifetimes = "warn"
 single_use_lifetimes = "warn"
@@ -83,6 +84,7 @@ default_trait_access = "warn"
 default_union_representation = "warn"
 deref_by_slicing = "allow"
 disallowed_script_idents = "warn"
+doc_include_without_cfg = "warn"
 doc_link_with_quotes = "warn"
 doc_markdown = "warn"
 else_if_without_else = "allow"
