--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "aoc"
 version = "2024.12.25"
 edition = "2024"
-rust-version = "1.85"
+rust-version = "1.86"
 
 [features]
 frivolity = []
@@ -199,6 +199,7 @@ needless_raw_strings = "warn"
 no_effect_underscore_binding = "warn"
 no_mangle_with_rust_abi = "warn"
 non_ascii_literal = "allow"
+non_std_lazy_statics = "warn"
 non_zero_suggestions = "warn"
 option_as_ref_cloned = "warn"
 option_option = "warn"
@@ -207,6 +208,7 @@ panic_in_result_fn = "warn"
 partial_pub_fields = "warn"
 pathbuf_init_then_push = "warn"
 pattern_type_mismatch = "allow"
+precedence_bits = "warn"
 print_stderr = "allow"
 print_stdout = "allow"
 ptr_as_ptr = "warn"
@@ -218,6 +220,7 @@ pub_without_shorthand = "warn"
 question_mark_used = "allow"
 range_minus_one = "warn"
 range_plus_one = "allow"
+return_and_then = "warn"
 rc_buffer = "warn"
 rc_mutex = "warn"
 redundant_closure_for_method_calls = "warn"
@@ -276,6 +279,7 @@ unnecessary_literal_bound = "warn"
 unnecessary_safety_comment = "warn"
 unnecessary_safety_doc = "warn"
 unnecessary_self_imports = "warn"
+unnecessary_semicolon = "warn"
 unnecessary_wraps = "warn"
 unneeded_field_pattern = "warn"
 unnested_or_patterns = "warn"
