--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "aoc"
 version = "2024.12.25"
 edition = "2024"
-rust-version = "1.86"
+rust-version = "1.87"
 
 [features]
 frivolity = []
@@ -84,9 +84,11 @@ default_trait_access = "warn"
 default_union_representation = "warn"
 deref_by_slicing = "allow"
 disallowed_script_idents = "warn"
+doc_comment_double_space_linebreaks = "warn"
 doc_include_without_cfg = "warn"
 doc_link_with_quotes = "warn"
 doc_markdown = "warn"
+elidable_lifetime_names = "warn"
 else_if_without_else = "allow"
 empty_drop = "warn"
 empty_enum = "warn"
@@ -154,9 +156,10 @@ macro_use_imports = "warn"
 manual_assert = "warn"
 manual_c_str_literals = "warn"
 manual_instant_elapsed = "warn"
-manual_is_power_of_two = "warn"
+manual_is_power_of_two = "allow"
 manual_is_variant_and = "warn"
 manual_let_else = "warn"
+manual_midpoint = "warn"
 manual_ok_or = "warn"
 manual_string_new = "warn"
 many_single_char_names = "allow"
@@ -164,7 +167,6 @@ map_err_ignore = "warn"
 map_unwrap_or = "warn"
 map_with_unused_argument_over_ranges = "warn"
 match_bool = "warn"
-match_on_vec_items = "allow"
 match_same_arms = "warn"
 match_wild_err_arm = "warn"
 match_wildcard_for_single_variants = "warn"
@@ -220,7 +222,7 @@ pub_without_shorthand = "warn"
 question_mark_used = "allow"
 range_minus_one = "warn"
 range_plus_one = "allow"
-return_and_then = "warn"
+return_and_then = "allow"
 rc_buffer = "warn"
 rc_mutex = "warn"
 redundant_closure_for_method_calls = "warn"
@@ -274,6 +276,7 @@ unicode_not_nfc = "warn"
 unimplemented = "warn"
 uninlined_format_args = "warn"
 unnecessary_box_returns = "warn"
+unnecessary_debug_formatting = "warn"
 unnecessary_join = "warn"
 unnecessary_literal_bound = "warn"
 unnecessary_safety_comment = "warn"
