--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "aoc"
 version = "2024.12.25"
 edition = "2024"
-rust-version = "1.87"
+rust-version = "1.88"
 
 [features]
 frivolity = []
@@ -58,6 +58,7 @@ allow_attributes_without_reason = "allow"
 arbitrary_source_item_ordering = "allow"
 arithmetic_side_effects = "allow"
 as_conversions = "allow"
+as_pointer_underscore = "warn"
 as_underscore = "warn"
 assertions_on_result_states = "warn"
 assigning_clones = "warn"
@@ -75,6 +76,7 @@ cfg_not_test = "warn"
 checked_conversions = "warn"
 clone_on_ref_ptr = "warn"
 cloned_instead_of_copied = "warn"
+comparison_chain = "warn"
 copy_iterator = "warn"
 create_dir = "warn"
 dbg_macro = "warn"
@@ -113,12 +115,14 @@ float_cmp = "warn"
 float_cmp_const = "warn"
 fn_params_excessive_bools = "warn"
 fn_to_numeric_cast_any = "warn"
+format_collect = "warn"
 format_push_string = "warn"
 from_iter_instead_of_collect = "warn"
 get_unwrap = "warn"
 host_endian_bytes = "allow"
 if_not_else = "warn"
 if_then_some_else_none = "warn"
+ignore_without_reason = "warn"
 ignored_unit_patterns = "warn"
 impl_trait_in_params = "warn"
 implicit_clone = "warn"
@@ -154,13 +158,11 @@ little_endian_bytes = "allow"
 lossy_float_literal = "warn"
 macro_use_imports = "warn"
 manual_assert = "warn"
-manual_c_str_literals = "warn"
 manual_instant_elapsed = "warn"
 manual_is_power_of_two = "allow"
 manual_is_variant_and = "warn"
 manual_let_else = "warn"
 manual_midpoint = "warn"
-manual_ok_or = "warn"
 manual_string_new = "warn"
 many_single_char_names = "allow"
 map_err_ignore = "warn"
@@ -191,10 +193,11 @@ multiple_unsafe_ops_per_block = "warn"
 must_use_candidate = "allow"
 mut_mut = "warn"
 mutex_atomic = "warn"
+mutex_integer = "warn"
 naive_bytecount = "allow"
 needless_bitwise_bool = "warn"
 needless_continue = "warn"
-needless_for_each = "warn"
+needless_for_each = "allow"
 needless_pass_by_value = "warn"
 needless_raw_string_hashes = "warn"
 needless_raw_strings = "warn"
@@ -222,18 +225,20 @@ pub_without_shorthand = "warn"
 question_mark_used = "allow"
 range_minus_one = "warn"
 range_plus_one = "allow"
-return_and_then = "allow"
 rc_buffer = "warn"
 rc_mutex = "warn"
 redundant_closure_for_method_calls = "warn"
 redundant_else = "warn"
+redundant_test_prefix = "warn"
 redundant_type_annotations = "warn"
 ref_as_ptr = "warn"
 ref_binding_to_reference = "warn"
 ref_option = "warn"
+ref_option_ref = "warn"
 ref_patterns = "warn"
 renamed_function_params = "warn"
 rest_pat_in_fully_bound_structs = "warn"
+return_and_then = "allow"
 return_self_not_must_use = "warn"
 same_functions_in_if_condition = "warn"
 same_name_method = "warn"
@@ -274,7 +279,6 @@ unchecked_duration_subtraction = "warn"
 undocumented_unsafe_blocks = "warn"
 unicode_not_nfc = "warn"
 unimplemented = "warn"
-uninlined_format_args = "warn"
 unnecessary_box_returns = "warn"
 unnecessary_debug_formatting = "warn"
 unnecessary_join = "warn"
@@ -297,6 +301,7 @@ unused_trait_names = "warn"
 unwrap_in_result = "allow"
 unwrap_used = "allow"
 use_debug = "warn"
+used_underscore_binding = "warn"
 used_underscore_items = "warn"
 verbose_bit_mask = "warn"
 verbose_file_reads = "warn"
