--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "aoc"
 version = "2024.12.25"
 edition = "2024"
-rust-version = "1.88"
+rust-version = "1.89"
 
 [features]
 frivolity = []
@@ -140,6 +140,7 @@ integer_division = "allow"
 integer_division_remainder_used = "allow"
 into_iter_without_iter = "warn"
 invalid_upcast_comparisons = "warn"
+ip_constant = "warn"
 items_after_statements = "warn"
 iter_filter_is_ok = "warn"
 iter_filter_is_some = "warn"
@@ -213,6 +214,7 @@ panic_in_result_fn = "warn"
 partial_pub_fields = "warn"
 pathbuf_init_then_push = "warn"
 pattern_type_mismatch = "allow"
+pointer_format = "warn"
 precedence_bits = "warn"
 print_stderr = "allow"
 print_stdout = "allow"
