--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "aoc"
 version = "2024.12.25"
 edition = "2024"
-rust-version = "1.90"
+rust-version = "1.91"
 
 # Speed up benchmarking by not recompiling everything when only a single file changes.
 [profile.bench]
@@ -90,6 +90,7 @@ default_trait_access = "warn"
 default_union_representation = "warn"
 deref_by_slicing = "allow"
 disallowed_script_idents = "warn"
+doc_broken_link = "warn"
 doc_comment_double_space_linebreaks = "warn"
 doc_include_without_cfg = "warn"
 doc_link_with_quotes = "warn"
@@ -283,6 +284,7 @@ try_err = "warn"
 unchecked_time_subtraction = "warn"
 undocumented_unsafe_blocks = "warn"
 unicode_not_nfc = "warn"
+uninlined_format_args = "allow"
 unimplemented = "warn"
 unnecessary_box_returns = "warn"
 unnecessary_debug_formatting = "warn"
