--- a/Cargo.toml
+++ b/Cargo.toml
@@ -98,7 +98,7 @@ doc_markdown = "warn"
 elidable_lifetime_names = "warn"
 else_if_without_else = "allow"
 empty_drop = "warn"
-empty_enum = "warn"
+empty_enums = "warn"
 empty_enum_variants_with_brackets = "warn"
 empty_structs_with_brackets = "warn"
 enum_glob_use = "allow"
