--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "aoc"
 version = "2024.12.25"
 edition = "2024"
-rust-version = "1.91"
+rust-version = "1.92"
 
 # Speed up benchmarking by not recompiling everything when only a single file changes.
 [profile.bench]
@@ -18,15 +18,15 @@ private_intra_doc_links = "allow"
 [lints.rust]
 absolute_paths_not_starting_with_crate = "warn"
 ambiguous_negative_literals = "warn"
-closure-returning-async-block = "warn"
+closure_returning_async_block = "warn"
+deref_into_dyn_supertrait = "warn"
 elided_lifetimes_in_paths = "warn"
 explicit_outlives_requirements = "warn"
 ffi_unwind_calls = "warn"
-if-let-rescope = "warn"
+if_let_rescope = "warn"
 let_underscore_drop = "warn"
 macro_use_extern_crate = "warn"
 meta_variable_misuse = "warn"
-missing_abi = "warn"
 missing_copy_implementations = "allow"
 missing_debug_implementations = "allow"
 missing_docs = "allow"
@@ -98,8 +98,8 @@ doc_markdown = "warn"
 elidable_lifetime_names = "warn"
 else_if_without_else = "allow"
 empty_drop = "warn"
-empty_enums = "warn"
 empty_enum_variants_with_brackets = "warn"
+empty_enums = "warn"
 empty_structs_with_brackets = "warn"
 enum_glob_use = "allow"
 error_impl_error = "warn"
@@ -250,6 +250,7 @@ return_self_not_must_use = "warn"
 same_functions_in_if_condition = "warn"
 same_name_method = "warn"
 self_named_module_files = "warn"
+self_only_used_in_recursion = "warn"
 semicolon_if_nothing_returned = "warn"
 semicolon_inside_block = "warn"
 semicolon_outside_block = "warn"
@@ -284,8 +285,8 @@ try_err = "warn"
 unchecked_time_subtraction = "warn"
 undocumented_unsafe_blocks = "warn"
 unicode_not_nfc = "warn"
-uninlined_format_args = "allow"
 unimplemented = "warn"
+uninlined_format_args = "allow"
 unnecessary_box_returns = "warn"
 unnecessary_debug_formatting = "warn"
 unnecessary_join = "warn"
